--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,12 @@ body {
 }
 
 hr {
-    background-color: #3cc4d4;
+    background-color: #17a3b8;
     height: 2px !important;
 }
 
 .bg-ligth-blue {
-    background-color: #3cc4d4;
+    background-color: #17a3b8;
 }
 
 .bg-black {
@@ -18,6 +18,12 @@ hr {
 
 .svg-image {
     width: 2rem
+}
+
+#destacado img {
+    height: 10rem;
+    overflow-x: hidden;
+    object-fit: cover;
 }
 
 
